# icfpc2024

./: Cargo.toml  LICENSE  flake.nix  test.raw
problems/: 3d.md  lambdaman.md  spaceship.md
solutions/best/3d/: 3d1  3d1.raw  3d2  3d2.raw  3d3  3d3.raw  3d5  3d5.raw  3d6  3d6.raw  3d7  3d7.raw  3d9  3d9.raw
solutions/best/efficiency/: efficiency1  efficiency13  efficiency2  efficiency3  efficiency4
solutions/best/lambdaman/: lambdaman10.icfp  lambdaman11.icfp  lambdaman12.icfp  lambdaman13.icfp  lambdaman14.icfp  lambdaman15.icfp  lambdaman16.icfp  lambdaman17.icfp  lambdaman18.icfp  lambdaman19.icfp  lambdaman20.icfp  lambdaman3.icfp  lambdaman4.icfp  lambdaman5.icfp  lambdaman6.icfp  lambdaman6.lasm  lambdaman7.icfp  lambdaman8.icfp  lambdaman9.icfp
solutions/best/spaceship/: spaceship10.icfp  spaceship11.icfp  spaceship13.icfp  spaceship14.icfp  spaceship15.icfp  spaceship16.icfp  spaceship17.icfp  spaceship18.icfp  spaceship19.icfp  spaceship2.icfp  (+10 more)
src/: ast.rs  base94.rs  comms.rs  eval.rs  geometry.rs  lambdaman.rs  lexer.rs  main.rs  parser.rs  serializer.rs
src/compression/: dict_compression.rs  mod.rs
src/icfp/: ast.rs  base94.rs  eval.rs  lexer.rs  mod.rs  parser.rs  serializer.rs
src/lambdaman/: graph.rs  model.rs
src/lambdaman_alt/: mod.rs  model.rs  random_walk.rs  tree_walk.rs
src/lasm/: ast.rs  compiler.rs  mod.rs  parser.rs
src/runner/: chain.rs  command.rs  mod.rs  problem.rs  solution.rs  solver.rs
src/spaceship/: greedy.rs  mod.rs  model.rs  one_by_one.rs
src/three_d/: board.rs  command.rs  gui.rs  mod.rs  sim.rs
(+2 files in other folders)
