[package]
name = "icfpc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
display_tree = "1.1.2"
dyn-clone = "1.0"
logos = "0.14"
once_cell = "1.8"
oxhttp = { version = "0.2", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text_io = "0.1"
